[tool.poetry]
name = "mpls-lab"
version = "0.1.0"
description = "My GNS3 MPLS Lab"
authors = ["yonosemanana <yonosemanana.ap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
